Fix T102944: fix Cycles viewport issues on macOS + NVIDIA

Part of the workaround for NVIDIA driver issue got lost in the changes to
switch to the GPU module.

Differential Revision: https://developer.blender.org/D16709